# DQ_POC

./: .gitignore  AGENTS.md  README.md  pyproject.toml  start-server.ps1
.nicegui/: storage-user-baf6ad4e-cc39-4da4-a7ab-e432d0af1123.json  storage-user-f5dd9ab8-1c81-435b-a10c-08b9235afb4a.json
docs/: architecture.md  technical-documentation.md
src/dqtool/: app.py  web_app.py
src/dqtool/models/: entities.py
src/dqtool/services/: ai.py  connectors.py  execution.py  profiling.py  project.py  rules.py  scheduling.py  storage.py  workspace.py
tests/: .runtime-latin1.csv  test_connection_sql.py  test_dashboard_trends.py  test_dialects.py  test_execution.py  test_profiling.py  test_rule_groups.py  test_rule_validation.py  test_scheduling.py  test_web_selection.py  test_workspace.py
tests/.runtime-results/: orders_require_customers.csv  unique_id.csv  unique_ids.csv  unique_ids_#10.csv
tests/fixtures/: customers.csv  orders.csv
